Closed Bug 1471018 Opened 7 years ago Closed 7 years ago

Crash in shutdownhang | __psynch_cvwait | <name omitted> | mozilla::dom::quota::QuotaManager::ShutdownObserver::Observe

Categories

(Core :: Storage: Quota Manager, defect, P2)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- wontfix
firefox61 --- wontfix
firefox62 --- fixed
firefox63 --- fixed

People

(Reporter: gsvelto, Assigned: janv)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file, 1 obsolete file)

This bug was filed from the Socorro interface and is report bp-098f98e8-3018-47d7-8cee-8c70a0180625. ============================================================= Top 10 frames of crashing thread: 0 libsystem_kernel.dylib __psynch_cvwait 1 libmozglue.dylib <name omitted> mozglue/misc/ConditionVariable_posix.cpp:118 2 XUL mozilla::ThreadEventQueue<mozilla::PrioritizedEventQueue<mozilla::EventQueue> >::GetEvent xpcom/threads/CondVar.h:66 3 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:983 4 XUL NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:519 5 XUL mozilla::dom::quota::QuotaManager::ShutdownObserver::Observe xpcom/threads/nsThreadUtils.h:324 6 XUL nsObserverList::NotifyObservers xpcom/ds/nsObserverList.cpp:112 7 XUL nsObserverService::NotifyObservers xpcom/ds/nsObserverService.cpp:295 8 XUL nsXREDirProvider::DoShutdown toolkit/xre/nsXREDirProvider.cpp:1067 9 XUL ScopedXPCOMStartup::~ScopedXPCOMStartup toolkit/xre/nsAppRunner.cpp:1396 =============================================================
Priority: -- → P2
Janv: Investigate
Flags: needinfo?(jvarga)
Jeez, we never set mShutdownRequested in AsmJSCache.cpp, so it can happen that ShutdownWorkThreads runs for too long.
Flags: needinfo?(jvarga)
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → jvarga
Status: NEW → ASSIGNED
Attachment #8999564 - Flags: review?(bugmail)
Comment on attachment 8999578 [details] [mq]: asmjscache, manually landed, so the phabricator revision was marked abandoned. Andrew Sutherland [:asuth] has approved the revision.
Attachment #8999578 - Flags: review+
Pushed by jvarga@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/0f32468900cd Speed-up AsmJSCache shutdown by setting the shutdown requested flag; r=asuth
Attachment #8999564 - Flags: review?(bugmail)
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
We should probably nominate this for Beta approval since that's where the crash reports seem to be coming from.
Attachment #8999564 - Attachment is obsolete: true
I've got a beta approval ready for submitting, will send it tomorrow or so.
Comment on attachment 8999578 [details] [mq]: asmjscache, manually landed, so the phabricator revision was marked abandoned. Approval Request Comment [Feature/Bug causing the regression]: 1389561 [User impact if declined]: Users may experience browser crashes during shutdown. [Is this code covered by automated tests?]: Yes. [Has the fix been verified in Nightly?]: Yes. [Needs manual test from QE? If yes, steps to reproduce]: No. [List of other uplifts needed for the feature/fix]: None. [Is the change risky?]: Very low risk. [Why is the change risky/not risky?]: The patch is very simple and the old asm.js caching is not used so much (it has been replaced with WebAssembly). [String changes made/needed]: None.
Flags: needinfo?(jvarga)
Attachment #8999578 - Flags: approval-mozilla-beta?
Comment on attachment 8999578 [details] [mq]: asmjscache, manually landed, so the phabricator revision was marked abandoned. Crash fix, looks very low volume on beta 62 but let's take it for uplift to beta 19.
Attachment #8999578 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment on attachment 8999578 [details] [mq]: asmjscache, manually landed, so the phabricator revision was marked abandoned. Andrew Sutherland [:asuth] has been removed from the revision.
Attachment #8999578 - Flags: review+
Attachment #8999578 - Attachment is obsolete: true
Comment on attachment 8999578 [details] [mq]: asmjscache, manually landed, so the phabricator revision was marked abandoned. The last 2 changes were because I wanted to close out the phabricator review so it got off the home screen. I couldn't figure out how to mark it as externally landed so I commandeered it and abandoned it.
Attachment #8999578 - Attachment description: [mq]: asmjscache → [mq]: asmjscache, manually landed, so the phabricator revision was marked abandoned.
Attachment #8999578 - Attachment is obsolete: false
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: