Bug 1471018 - Speed-up AsmJSCache shutdown by setting the shutdown requested flag; r=asuth